--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Website Icon -->
-    <link rel="shortcut icon" href="/images/dashboard.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/dashboard.png" type="image/x-icon">
     <!-- Normalizing File -->
     <link rel="stylesheet" href="css/normalize.css" />
     <!-- Font Awesome Library -->
@@ -22,6 +22,7 @@
     <title>TCourse</title>
   </head>
   <body>
+    
     <div class="container">
       <!-- Start Navbar -->
       <div class="left-section">
@@ -42,34 +43,34 @@
               >
             </li>
             <li>
-              <a href="/profile.html"
+              <a href="profile.html"
                 ><i class="fa-solid fa-user"></i><span>Profile</span></a
               >
             </li>
             <li>
-              <a href="/teachers.html"
+              <a href="teachers.html"
                 ><i class="fa-solid fa-user-group"></i><span>Teachers</span></a
               >
             </li>
             <li>
-              <a href="/projects.html"
+              <a href="projects.html"
                 ><i class="fa-sharp fa-solid fa-diagram-project"></i
                 ><span>Projects</span></a
               >
             </li>
             <li>
-              <a href="/courses.html"
+              <a href="courses.html"
                 ><i class="fa-sharp fa-solid fa-graduation-cap"></i
                 ><span>Courses</span></a
               >
             </li>
             <li>
-              <a href="/files.html"
+              <a href="files.html"
                 ><i class="fa-sharp fa-solid fa-file"></i><span>Files</span></a
               >
             </li>
             <li>
-              <a href="/plans.html"
+              <a href="plans.html"
                 ><i class="fa-sharp fa-solid fa-credit-card"></i
                 ><span>Plans</span></a
               >
@@ -82,12 +83,12 @@
         <header>
           <h3>Dashboard</h3>
           <div class="user-box">
-            <a href="/profile.html"
+            <a href="profile.html"
               ><div class="notifications"><i class="fa-solid fa-bell"></i></div
             ></a>
-            <a href="/profile.html"
+            <a href="profile.html"
               ><div class="user-image">
-                <img src="/images/personal.png" alt="" /></div
+                <img src="images/personal.png" alt="" /></div
             ></a>
           </div>
         </header>
@@ -238,7 +239,7 @@
               <h4>Latest Uploads</h4>
               <div class="upload">
                 <div>
-                  <img src="/images/pdf.svg" alt="" />
+                  <img src="images/pdf.svg" alt="" />
                   <div>
                     <h5>My-File.pdf</h5>
                     <p>Elzero</p>
@@ -248,7 +249,7 @@
               </div>
               <div class="upload">
                 <div>
-                  <img src="/images/avi.svg" alt="" />
+                  <img src="images/avi.svg" alt="" />
                   <div>
                     <h5>My-Video-File.avi</h5>
                     <p>Admin</p>
@@ -258,7 +259,7 @@
               </div>
               <div class="upload">
                 <div>
-                  <img src="/images/psd.svg" alt="" />
+                  <img src="images/psd.svg" alt="" />
                   <div>
                     <h5>My-Psd-File.psd</h5>
                     <p>Mohamad</p>
@@ -268,7 +269,7 @@
               </div>
               <div class="upload">
                 <div>
-                  <img src="/images/zip.svg" alt="" />
+                  <img src="images/zip.svg" alt="" />
                   <div>
                     <h5>My-Zip-File.zip</h5>
                     <p>User</p>
@@ -278,7 +279,7 @@
               </div>
               <div class="upload">
                 <div>
-                  <img src="/images/dll.svg" alt="" />
+                  <img src="images/dll.svg" alt="" />
                   <div>
                     <h5>My-Dll-File.Dll</h5>
                     <p>Admin</p>
@@ -288,7 +289,7 @@
               </div>
               <div class="upload">
                 <div>
-                  <img src="/images/eps.svg" alt="" />
+                  <img src="images/eps.svg" alt="" />
                   <div>
                     <h5>My-Eps-File.eps</h5>
                     <p>Designer</p>
@@ -338,7 +339,7 @@
             <div class="latest-news">
               <h4>Latest News</h4>
               <div class="new">
-                <img src="/images/news-01.png" alt="" />
+                <img src="images/news-01.png" alt="" />
                 <div>
                   <h5>Created SASS Section</h5>
                   <p>New SASS Examples & Tutorials</p>
@@ -346,7 +347,7 @@
                 <span>3 Days Ago</span>
               </div>
               <div class="new">
-                <img src="/images/news-02.png" alt="" />
+                <img src="images/news-02.png" alt="" />
                 <div>
                   <h5>Changed The Design</h5>
                   <p>A Brand New Website Design</p>
@@ -354,7 +355,7 @@
                 <span>5 Days Ago</span>
               </div>
               <div class="new">
-                <img src="/images/news-03.png" alt="" />
+                <img src="images/news-03.png" alt="" />
                 <div>
                   <h5>Team Increased</h5>
                   <p>3 Developers Joined The Team</p>
@@ -362,7 +363,7 @@
                 <span>6 Days Ago</span>
               </div>
               <div class="new">
-                <img src="/images/news-04.png" alt="" />
+                <img src="images/news-04.png" alt="" />
                 <div>
                   <h5>Added Payment Gateway</h5>
                   <p>New Payment Gateways Added</p>
