--- a/projects.html
+++ b/projects.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Website Icon -->
-    <link rel="shortcut icon" href="/images/dashboard.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/dashboard.png" type="image/x-icon">
     <!-- Normalizing File -->
-    <link rel="stylesheet" href="/css/normalize.css" />
+    <link rel="stylesheet" href="css/normalize.css" />
     <!-- Font Awesome Library -->
-    <link rel="stylesheet" href="/css/all.min.css" />
+    <link rel="stylesheet" href="css/all.min.css" />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -18,7 +18,7 @@
       rel="stylesheet"
     />
     <!-- Main CSS File -->
-    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <title>Projects</title>
   </head>
   <body>
@@ -36,40 +36,40 @@
               ></i>
             </li>
             <li>
-              <a href="/index.html"
+              <a href="index.html"
                 ><i class="fa-regular fa-chart-bar fa-fw"></i
                 ><span>Dashboard</span></a
               >
             </li>
             <li>
-              <a href="/profile.html"
+              <a href="profile.html"
                 ><i class="fa-solid fa-user"></i><span>Profile</span></a
               >
             </li>
             <li>
-              <a href="/teachers.html"
+              <a href="teachers.html"
                 ><i class="fa-solid fa-user-group"></i><span>Teachers</span></a
               >
             </li>
             <li class="active">
-              <a href="/projects.html"
+              <a href="projects.html"
                 ><i class="fa-sharp fa-solid fa-diagram-project"></i
                 ><span>Projects</span></a
               >
             </li>
             <li>
-              <a href="/courses.html"
+              <a href="courses.html"
                 ><i class="fa-sharp fa-solid fa-graduation-cap"></i
                 ><span>Courses</span></a
               >
             </li>
             <li>
-              <a href="/files.html"
+              <a href="files.html"
                 ><i class="fa-sharp fa-solid fa-file"></i><span>Files</span></a
               >
             </li>
             <li>
-              <a href="/plans.html"
+              <a href="plans.html"
                 ><i class="fa-sharp fa-solid fa-credit-card"></i
                 ><span>Plans</span></a
               >
@@ -82,12 +82,12 @@
         <header>
           <h3>Projects</h3>
           <div class="user-box">
-            <a href="/profile.html"
+            <a href="profile.html"
               ><div class="notifications"><i class="fa-solid fa-bell"></i></div
             ></a>
-            <a href="/profile.html"
+            <a href="profile.html"
               ><div class="user-image">
-                <img src="/images/personal.png" alt="" /></div
+                <img src="images/personal.png" alt="" /></div
             ></a>
           </div>
         </header>
@@ -99,12 +99,12 @@
               <p>Project Design And Programming And Hosting</p>
             </header>
             <div class="team">
-              <img src="/images/friend-02.jpg" alt="" />
-              <img src="/images/friend-04.jpg" alt="" />
-              <img src="/images/friend-05.jpg" alt="" />
-              <img src="/images/friend-07.jpg" alt="" />
-              <img src="/images/friend-01.jpg" alt="" />
-              <img src="/images/friend-09.jpg" alt="" />
+              <img src="images/friend-02.jpg" alt="" />
+              <img src="images/friend-04.jpg" alt="" />
+              <img src="images/friend-05.jpg" alt="" />
+              <img src="images/friend-07.jpg" alt="" />
+              <img src="images/friend-01.jpg" alt="" />
+              <img src="images/friend-09.jpg" alt="" />
             </div>
             <div class="tags">
               <span>Programming</span>
@@ -129,12 +129,12 @@
               <p>Project Design And Programming And Hosting</p>
             </header>
             <div class="team">
-              <img src="/images/friend-03.jpg" alt="" />
-              <img src="/images/friend-04.jpg" alt="" />
-              <img src="/images/friend-09.jpg" alt="" />
-              <img src="/images/friend-04.jpg" alt="" />
-              <img src="/images/friend-03.jpg" alt="" />
-              <img src="/images/friend-01.jpg" alt="" />
+              <img src="images/friend-03.jpg" alt="" />
+              <img src="images/friend-04.jpg" alt="" />
+              <img src="images/friend-09.jpg" alt="" />
+              <img src="images/friend-04.jpg" alt="" />
+              <img src="images/friend-03.jpg" alt="" />
+              <img src="images/friend-01.jpg" alt="" />
             </div>
             <div class="tags">
               <span>Thumbnail</span>
@@ -157,12 +157,12 @@
               <p>Project Design And Programming And Hosting</p>
             </header>
             <div class="team">
-              <img src="/images/friend-03.jpg" alt="" />
-              <img src="/images/friend-09.jpg" alt="" />
-              <img src="/images/friend-08.jpg" alt="" />
-              <img src="/images/friend-06.jpg" alt="" />
-              <img src="/images/friend-05.jpg" alt="" />
-              <img src="/images/friend-04.jpg" alt="" />
+              <img src="images/friend-03.jpg" alt="" />
+              <img src="images/friend-09.jpg" alt="" />
+              <img src="images/friend-08.jpg" alt="" />
+              <img src="images/friend-06.jpg" alt="" />
+              <img src="images/friend-05.jpg" alt="" />
+              <img src="images/friend-04.jpg" alt="" />
             </div>
             <div class="tags">
               <span>Programming</span>
@@ -186,11 +186,11 @@
               <p>Project Design And Programming And Hosting</p>
             </header>
             <div class="team">
-              <img src="/images/friend-01.jpg" alt="" />
-              <img src="/images/friend-09.jpg" alt="" />
-              <img src="/images/friend-06.jpg" alt="" />
-              <img src="/images/friend-05.jpg" alt="" />
-              <img src="/images/friend-02.jpg" alt="" />
+              <img src="images/friend-01.jpg" alt="" />
+              <img src="images/friend-09.jpg" alt="" />
+              <img src="images/friend-06.jpg" alt="" />
+              <img src="images/friend-05.jpg" alt="" />
+              <img src="images/friend-02.jpg" alt="" />
             </div>
             <div class="tags">
               <span>Programming</span>
@@ -214,9 +214,9 @@
               <p>Project Design And Programming And Hosting</p>
             </header>
             <div class="team">
-              <img src="/images/friend-01.jpg" alt="" />
-              <img src="/images/friend-02.jpg" alt="" />
-              <img src="/images/friend-03.jpg" alt="" />
+              <img src="images/friend-01.jpg" alt="" />
+              <img src="images/friend-02.jpg" alt="" />
+              <img src="images/friend-03.jpg" alt="" />
             </div>
             <div class="tags">
               <span>Programming</span>
@@ -240,11 +240,11 @@
               <p>Project Design And Programming And Hosting</p>
             </header>
             <div class="team">
-              <img src="/images/friend-01.jpg" alt="" />
-              <img src="/images/friend-04.jpg" alt="" />
-              <img src="/images/friend-08.jpg" alt="" />
-              <img src="/images/friend-09.jpg" alt="" />
-              <img src="/images/friend-07.jpg" alt="" />
+              <img src="images/friend-01.jpg" alt="" />
+              <img src="images/friend-04.jpg" alt="" />
+              <img src="images/friend-08.jpg" alt="" />
+              <img src="images/friend-09.jpg" alt="" />
+              <img src="images/friend-07.jpg" alt="" />
             </div>
             <div class="tags">
               <span>Programming</span>
@@ -268,9 +268,9 @@
               <p>Project Design And Programming And Hosting</p>
             </header>
             <div class="team">
-              <img src="/images/friend-01.jpg" alt="" />
-              <img src="/images/friend-02.jpg" alt="" />
-              <img src="/images/friend-03.jpg" alt="" />
+              <img src="images/friend-01.jpg" alt="" />
+              <img src="images/friend-02.jpg" alt="" />
+              <img src="images/friend-03.jpg" alt="" />
             </div>
             <div class="tags">
               <span>Programming</span>
@@ -293,12 +293,12 @@
               <p>Project Design And Programming And Hosting</p>
             </header>
             <div class="team">
-              <img src="/images/friend-09.jpg" alt="" />
-              <img src="/images/friend-03.jpg" alt="" />
-              <img src="/images/friend-04.jpg" alt="" />
-              <img src="/images/friend-07.jpg" alt="" />
-              <img src="/images/friend-08.jpg" alt="" />
-              <img src="/images/friend-09.jpg" alt="" />
+              <img src="images/friend-09.jpg" alt="" />
+              <img src="images/friend-03.jpg" alt="" />
+              <img src="images/friend-04.jpg" alt="" />
+              <img src="images/friend-07.jpg" alt="" />
+              <img src="images/friend-08.jpg" alt="" />
+              <img src="images/friend-09.jpg" alt="" />
             </div>
             <div class="tags">
               <span>Programming</span>
@@ -321,7 +321,7 @@
         </main>
       </div>
     </div>
-    <script src="/js/projects.js"></script>
-    <!-- <script src="/js/all.min.js"></script> -->
+    <script src="js/projects.js"></script>
+    <!-- <script src="js/all.min.js"></script> -->
   </body>
 </html>
