--- a/teachers.html
+++ b/teachers.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Website Icon -->
-    <link rel="shortcut icon" href="/images/dashboard.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/dashboard.png" type="image/x-icon">
     <!-- Normalizing File -->
-    <link rel="stylesheet" href="/css/normalize.css" />
+    <link rel="stylesheet" href="css/normalize.css" />
     <!-- Font Awesome Library -->
-    <link rel="stylesheet" href="/css/all.min.css" />
+    <link rel="stylesheet" href="css/all.min.css" />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -18,7 +18,7 @@
       rel="stylesheet"
     />
     <!-- Main CSS File -->
-    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <title>Teachers</title>
   </head>
   <body>
@@ -36,40 +36,40 @@
               ></i>
             </li>
             <li>
-              <a href="/index.html"
+              <a href="index.html"
                 ><i class="fa-regular fa-chart-bar fa-fw"></i
                 ><span>Dashboard</span></a
               >
             </li>
             <li>
-              <a href="/profile.html"
+              <a href="profile.html"
                 ><i class="fa-solid fa-user"></i><span>Profile</span></a
               >
             </li>
             <li class="active">
-              <a href="/teachers.html"
+              <a href="teachers.html"
                 ><i class="fa-solid fa-user-group"></i><span>Teachers</span></a
               >
             </li>
             <li>
-              <a href="/projects.html"
+              <a href="projects.html"
                 ><i class="fa-sharp fa-solid fa-diagram-project"></i
                 ><span>Projects</span></a
               >
             </li>
             <li>
-              <a href="/courses.html"
+              <a href="courses.html"
                 ><i class="fa-sharp fa-solid fa-graduation-cap"></i
                 ><span>Courses</span></a
               >
             </li>
             <li>
-              <a href="/files.html"
+              <a href="files.html"
                 ><i class="fa-sharp fa-solid fa-file"></i><span>Files</span></a
               >
             </li>
             <li>
-              <a href="/plans.html"
+              <a href="plans.html"
                 ><i class="fa-sharp fa-solid fa-credit-card"></i
                 ><span>Plans</span></a
               >
@@ -83,12 +83,12 @@
 
           <h3>Teachers</h3>
           <div class="user-box">
-            <a href="/profile.html"
+            <a href="profile.html"
               ><div class="notifications"><i class="fa-solid fa-bell"></i></div
             ></a>
-            <a href="/profile.html"
+            <a href="profile.html"
               ><div class="user-image">
-                <img src="/images/personal.png" alt="" /></div
+                <img src="images/personal.png" alt="" /></div
             ></a>
           </div>
         </header>
@@ -99,7 +99,7 @@
               <i class="fa-regular fa-envelope"></i>
             </div>
             <div class="title">
-              <img src="/images/friend-01.jpg" alt="" />
+              <img src="images/friend-01.jpg" alt="" />
               <h4>Mohamad Ali</h4>
               <p>JavaScript Developer</p>
             </div>
@@ -116,8 +116,8 @@
             <div class="info">
               <span>Joined 21/2/2022</span>
               <div>
-                <a href="/profile.html">Profile</a>
-                <a href="/profile.html">Remove</a>
+                <a href="profile.html">Profile</a>
+                <a href="profile.html">Remove</a>
               </div>
             </div>
           </div>
@@ -127,7 +127,7 @@
               <i class="fa-regular fa-envelope"></i>
             </div>
             <div class="title">
-              <img src="/images/friend-02.jpg" alt="" />
+              <img src="images/friend-02.jpg" alt="" />
               <h4>Ibrahem Hesin</h4>
               <p>React Developer</p>
             </div>
@@ -143,8 +143,8 @@
             <div class="info">
               <span>Joined 13/3/2022</span>
               <div>
-                <a href="/profile.html">Profile</a>
-                <a href="/profile.html">Remove</a>
+                <a href="profile.html">Profile</a>
+                <a href="profile.html">Remove</a>
               </div>
             </div>
           </div>
@@ -154,7 +154,7 @@
               <i class="fa-regular fa-envelope"></i>
             </div>
             <div class="title">
-              <img src="/images/friend-03.jpg" alt="" />
+              <img src="images/friend-03.jpg" alt="" />
               <h4>Malek Dalati</h4>
               <p>Mobile Developer</p>
             </div>
@@ -170,8 +170,8 @@
             <div class="info">
               <span>Joined 14/7/2022</span>
               <div>
-                <a href="/profile.html">Profile</a>
-                <a href="/profile.html">Remove</a>
+                <a href="profile.html">Profile</a>
+                <a href="profile.html">Remove</a>
               </div>
             </div>
           </div>
@@ -181,7 +181,7 @@
               <i class="fa-regular fa-envelope"></i>
             </div>
             <div class="title">
-              <img src="/images/friend-04.jpg" alt="" />
+              <img src="images/friend-04.jpg" alt="" />
               <h4>Ayham Fatoh</h4>
               <p>Front-End Developer</p>
             </div>
@@ -197,8 +197,8 @@
             <div class="info">
               <span>Joined 19/1/2022</span>
               <div>
-                <a href="/profile.html">Profile</a>
-                <a href="/profile.html">Remove</a>
+                <a href="profile.html">Profile</a>
+                <a href="profile.html">Remove</a>
               </div>
             </div>
           </div>
@@ -208,7 +208,7 @@
               <i class="fa-regular fa-envelope"></i>
             </div>
             <div class="title">
-              <img src="/images/friend-05.jpg" alt="" />
+              <img src="images/friend-05.jpg" alt="" />
               <h4>Ahmad Zen</h4>
               <p>Back-End Developer</p>
             </div>
@@ -224,8 +224,8 @@
             <div class="info">
               <span>Joined 25/2/2022</span>
               <div>
-                <a href="/profile.html">Profile</a>
-                <a href="/profile.html">Remove</a>
+                <a href="profile.html">Profile</a>
+                <a href="profile.html">Remove</a>
               </div>
             </div>
           </div>
@@ -235,7 +235,7 @@
               <i class="fa-regular fa-envelope"></i>
             </div>
             <div class="title">
-              <img src="/images/friend-06.jpg" alt="" />
+              <img src="images/friend-06.jpg" alt="" />
               <h4>Rami Hamad</h4>
               <p>Full Stack Developer</p>
             </div>
@@ -251,8 +251,8 @@
             <div class="info">
               <span>Joined 25/5/2022</span>
               <div>
-                <a href="/profile.html">Profile</a>
-                <a href="/profile.html">Remove</a>
+                <a href="profile.html">Profile</a>
+                <a href="profile.html">Remove</a>
               </div>
             </div>
           </div>
@@ -262,7 +262,7 @@
               <i class="fa-regular fa-envelope"></i>
             </div>
             <div class="title">
-              <img src="/images/friend-07.jpg" alt="" />
+              <img src="images/friend-07.jpg" alt="" />
               <h4>Tamam Amer</h4>
               <p>Angular Developer</p>
             </div>
@@ -278,8 +278,8 @@
             <div class="info">
               <span>Joined 21/9/2022</span>
               <div>
-                <a href="/profile.html">Profile</a>
-                <a href="/profile.html">Remove</a>
+                <a href="profile.html">Profile</a>
+                <a href="profile.html">Remove</a>
               </div>
             </div>
           </div>
@@ -289,7 +289,7 @@
               <i class="fa-regular fa-envelope"></i>
             </div>
             <div class="title">
-              <img src="/images/friend-08.jpg" alt="" />
+              <img src="images/friend-08.jpg" alt="" />
               <h4>Amer Ibrahem</h4>
               <p>Thumbnail Designer</p>
             </div>
@@ -305,8 +305,8 @@
             <div class="info">
               <span>Joined 2/2/2022</span>
               <div>
-                <a href="/profile.html">Profile</a>
-                <a href="/profile.html">Remove</a>
+                <a href="profile.html">Profile</a>
+                <a href="profile.html">Remove</a>
               </div>
             </div>
           </div>
@@ -316,7 +316,7 @@
               <i class="fa-regular fa-envelope"></i>
             </div>
             <div class="title">
-              <img src="/images/friend-09.jpg" alt="" />
+              <img src="images/friend-09.jpg" alt="" />
               <h4>Ahmed Naser</h4>
               <p>UI/UX Designer</p>
             </div>
@@ -332,8 +332,8 @@
             <div class="info">
               <span>Joined 21/7/2022</span>
               <div>
-                <a href="/profile.html">Profile</a>
-                <a href="/profile.html">Remove</a>
+                <a href="profile.html">Profile</a>
+                <a href="profile.html">Remove</a>
               </div>
             </div>
           </div>
