--- a/courses.html
+++ b/courses.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- Website Icon -->
-    <link rel="shortcut icon" href="/images/dashboard.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/dashboard.png" type="image/x-icon">
     <!-- Normalizing File -->
-    <link rel="stylesheet" href="/css/normalize.css" />
+    <link rel="stylesheet" href="css/normalize.css" />
     <!-- Font Awesome Library -->
-    <link rel="stylesheet" href="/css/all.min.css" />
+    <link rel="stylesheet" href="css/all.min.css" />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -19,7 +19,7 @@
       rel="stylesheet"
     />
     <!-- Main CSS File -->
-    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <title>Courses</title>
   </head>
   <body>
@@ -37,40 +37,40 @@
               ></i>
             </li>
             <li>
-              <a href="/index.html"
+              <a href="index.html"
                 ><i class="fa-regular fa-chart-bar fa-fw"></i
                 ><span>Dashboard</span></a
               >
             </li>
             <li>
-              <a href="/profile.html"
+              <a href="profile.html"
                 ><i class="fa-solid fa-user"></i><span>Profile</span></a
               >
             </li>
             <li>
-              <a href="/teachers.html"
+              <a href="teachers.html"
                 ><i class="fa-solid fa-user-group"></i><span>Teachers</span></a
               >
             </li>
             <li>
-              <a href="/projects.html"
+              <a href="projects.html"
                 ><i class="fa-sharp fa-solid fa-diagram-project"></i
                 ><span>Projects</span></a
               >
             </li>
             <li class="active">
-              <a href="/courses.html"
+              <a href="courses.html"
                 ><i class="fa-sharp fa-solid fa-graduation-cap"></i
                 ><span>Courses</span></a
               >
             </li>
             <li>
-              <a href="/files.html"
+              <a href="files.html"
                 ><i class="fa-sharp fa-solid fa-file"></i><span>Files</span></a
               >
             </li>
             <li>
-              <a href="/plans.html"
+              <a href="plans.html"
                 ><i class="fa-sharp fa-solid fa-credit-card"></i
                 ><span>Plans</span></a
               >
@@ -83,20 +83,20 @@
         <header>
           <h3>Courses</h3>
           <div class="user-box">
-            <a href="/profile.html"
+            <a href="profile.html"
               ><div class="notifications"><i class="fa-solid fa-bell"></i></div
             ></a>
-            <a href="/profile.html"
+            <a href="profile.html"
               ><div class="user-image">
-                <img src="/images/personal.png" alt="" /></div
+                <img src="images/personal.png" alt="" /></div
             ></a>
           </div>
         </header>
         <main class="courses">
           <div class="course">
             <div class="images">
-              <img src="/images/friend-08.jpg" alt="" class="instructor" />
-              <img src="/images/course-01.jpg" alt="" class="cover" />
+              <img src="images/friend-08.jpg" alt="" class="instructor" />
+              <img src="images/course-01.jpg" alt="" class="cover" />
             </div>
             <div>
               <h4>Mastering Web Design</h4>
@@ -113,8 +113,8 @@
           </div>
           <div class="course">
             <div class="images">
-              <img src="/images/friend-01.jpg" alt="" class="instructor" />
-              <img src="/images/course-02.jpg" alt="" class="cover" />
+              <img src="images/friend-01.jpg" alt="" class="instructor" />
+              <img src="images/course-02.jpg" alt="" class="cover" />
             </div>
             <div>
               <h4>Mastering PHP</h4>
@@ -131,8 +131,8 @@
           </div>
           <div class="course">
             <div class="images">
-              <img src="/images/friend-02.jpg" alt="" class="instructor" />
-              <img src="/images/course-03.jpg" alt="" class="cover" />
+              <img src="images/friend-02.jpg" alt="" class="instructor" />
+              <img src="images/course-03.jpg" alt="" class="cover" />
             </div>
             <div>
               <h4>Mastering Data Structure</h4>
@@ -149,8 +149,8 @@
           </div>
           <div class="course">
             <div class="images">
-              <img src="/images/friend-03.jpg" alt="" class="instructor" />
-              <img src="/images/course-04.jpg" alt="" class="cover" />
+              <img src="images/friend-03.jpg" alt="" class="instructor" />
+              <img src="images/course-04.jpg" alt="" class="cover" />
             </div>
             <div>
               <h4>Mastering Design</h4>
@@ -167,8 +167,8 @@
           </div>
           <div class="course">
             <div class="images">
-              <img src="/images/friend-04.jpg" alt="" class="instructor" />
-              <img src="/images/course-05.jpg" alt="" class="cover" />
+              <img src="images/friend-04.jpg" alt="" class="instructor" />
+              <img src="images/course-05.jpg" alt="" class="cover" />
             </div>
             <div>
               <h4>Social Media Thumbnail</h4>
@@ -185,8 +185,8 @@
           </div>
           <div class="course">
             <div class="images">
-              <img src="/images/friend-05.jpg" alt="" class="instructor" />
-              <img src="/images/course-06.jpg
+              <img src="images/friend-05.jpg" alt="" class="instructor" />
+              <img src="images/course-06.jpg
               " alt="" class="cover" />
             </div>
             <div>
@@ -204,8 +204,8 @@
           </div>
           <div class="course">
             <div class="images">
-              <img src="/images/friend-06.jpg" alt="" class="instructor" />
-              <img src="/images/course-07.jpg" alt="" class="cover" />
+              <img src="images/friend-06.jpg" alt="" class="instructor" />
+              <img src="images/course-07.jpg" alt="" class="cover" />
             </div>
             <div>
               <h4>Mastaring Front End </h4>
@@ -222,8 +222,8 @@
           </div>
           <div class="course">
             <div class="images">
-              <img src="/images/friend-07.jpg" alt="" class="instructor" />
-              <img src="/images/course-08.jpg" alt="" class="cover" />
+              <img src="images/friend-07.jpg" alt="" class="instructor" />
+              <img src="images/course-08.jpg" alt="" class="cover" />
             </div>
             <div>
               <h4>Mastaring Back End </h4>
@@ -240,8 +240,8 @@
           </div>
           <div class="course">
             <div class="images">
-              <img src="/images/friend-08.jpg" alt="" class="instructor" />
-              <img src="/images/course-03.jpg" alt="" class="cover" />
+              <img src="images/friend-08.jpg" alt="" class="instructor" />
+              <img src="images/course-03.jpg" alt="" class="cover" />
             </div>
             <div>
               <h4>Mastering Web Design</h4>
@@ -258,8 +258,8 @@
           </div>
           <div class="course">
             <div class="images">
-              <img src="/images/friend-09.jpg" alt="" class="instructor" />
-              <img src="/images/course-01.jpg" alt="" class="cover" />
+              <img src="images/friend-09.jpg" alt="" class="instructor" />
+              <img src="images/course-01.jpg" alt="" class="cover" />
             </div>
             <div>
               <h4>Mastering Web Design</h4>
@@ -277,6 +277,6 @@
         </main>
       </div>
     </div>
-    <link rel="stylesheet" href="/js/all.min.js" />
+    <link rel="stylesheet" href="js/all.min.js" />
   </body>
 </html>
