--- a/profile.html
+++ b/profile.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Website Icon -->
-    <link rel="shortcut icon" href="/images/dashboard.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/dashboard.png" type="image/x-icon">
     <!-- Normalizing File -->
-    <link rel="stylesheet" href="/css/normalize.css" />
+    <link rel="stylesheet" href="css/normalize.css" />
     <!-- Font Awesome Library -->
-    <link rel="stylesheet" href="/css/all.min.css" />
+    <link rel="stylesheet" href="css/all.min.css" />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -18,7 +18,7 @@
       rel="stylesheet"
     />
     <!-- Main CSS File -->
-    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <title>Profile</title>
   </head>
   <body>
@@ -36,40 +36,40 @@
               ></i>
             </li>
             <li>
-              <a href="/index.html"
+              <a href="index.html"
                 ><i class="fa-regular fa-chart-bar fa-fw"></i
                 ><span>Dashboard</span></a
               >
             </li>
             <li class="active">
-              <a href="/profile.html"
+              <a href="profile.html"
                 ><i class="fa-solid fa-user"></i><span>Profile</span></a
               >
             </li>
             <li>
-              <a href="/teachers.html"
+              <a href="teachers.html"
                 ><i class="fa-solid fa-user-group"></i><span>Teachers</span></a
               >
             </li>
             <li>
-              <a href="/projects.html"
+              <a href="projects.html"
                 ><i class="fa-sharp fa-solid fa-diagram-project"></i
                 ><span>Projects</span></a
               >
             </li>
             <li>
-              <a href="/courses.html"
+              <a href="courses.html"
                 ><i class="fa-sharp fa-solid fa-graduation-cap"></i
                 ><span>Courses</span></a
               >
             </li>
             <li>
-              <a href="/files.html"
+              <a href="files.html"
                 ><i class="fa-sharp fa-solid fa-file"></i><span>Files</span></a
               >
             </li>
             <li>
-              <a href="/plans.html"
+              <a href="plans.html"
                 ><i class="fa-sharp fa-solid fa-credit-card"></i
                 ><span>Plans</span></a
               >
@@ -82,19 +82,19 @@
         <header>
           <h3>Profile</h3>
           <div class="user-box">
-            <a href="/profile.html"
+            <a href="profile.html"
               ><div class="notifications"><i class="fa-solid fa-bell"></i></div
             ></a>
-            <a href="/profile.html"
+            <a href="profile.html"
               ><div class="user-image">
-                <img src="/images/personal.png" alt="" /></div
+                <img src="images/personal.png" alt="" /></div
             ></a>
           </div>
         </header>
         <main class="profile">
           <div class="overview">
             <div class="photo-box">
-              <img src="/images/personal.png" alt="" />
+              <img src="images/personal.png" alt="" />
               <h3>Mohamad Al-Telawe</h3>
               <p>level 20</p>
               <div class="level"><span></span></div>
@@ -179,7 +179,7 @@
             <h2>Latest Activities</h2>
             <p>Latest Activities Done By The User</p>
             <div class="activity">
-              <img src="/images/activity-01.png" alt="" />
+              <img src="images/activity-01.png" alt="" />
               <div class="info">
                 <div class="title">
                   <span>Store</span>
@@ -192,7 +192,7 @@
               </div>
             </div>
             <div class="activity">
-              <img src="/images/activity-02.png" alt="" />
+              <img src="images/activity-02.png" alt="" />
               <div class="info">
                 <div class="title">
                   <span>Academy</span>
@@ -205,7 +205,7 @@
               </div>
             </div>
             <div class="activity">
-              <img src="/images/activity-03.png" alt="" />
+              <img src="images/activity-03.png" alt="" />
               <div class="info">
                 <div class="title">
                   <span>Badges</span>
@@ -218,7 +218,7 @@
               </div>
             </div>
             <div class="activity">
-              <img src="/images/activity-01.png" alt="" />
+              <img src="images/activity-01.png" alt="" />
               <div class="info">
                 <div class="title">
                   <span>Store</span>
@@ -234,6 +234,6 @@
         </main>
       </div>
     </div>
-    <link rel="stylesheet" href="/js/all.min.js" />
+    <link rel="stylesheet" href="js/all.min.js" />
   </body>
 </html>
